--- a/application-dev.yml
+++ b/application-dev.yml
@@ -55,4 +55,4 @@ eform:
   
 carmel:
   temp-files-upload-path: "/mnt/volume/apps/docker/uploads/"
-  reports-template-path: "/home/"
+  reports-template-path: "/home/reports-template/"
